syntax = "proto3";

package pb;

import "protoc-gen-openapiv2/options/annotations.proto";

import "account_info.proto";

option go_package = "github.com/itsscb/df/pb";

message GetAccountInfoRequest {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "GetAccountInfo";
          description: "Get AccountInfo by account_id";
          required: [
            "account_id"
            ];
        };
        example: "{\"account_id\": \"1\" }";
    };
    uint64 account_id = 1;
}

message GetAccountInfoResponse {
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
        json_schema: {
          title: "GetAccountInfo Response";
          description: "Returns the AccountInfo";
        };
    };
    AccountInfo account_info = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      }];
}